crates/vize_atelier_jsx/src/compile/snapshots/vize_atelier_jsx__compile__tests__module_code_prepends_merged_preamble_to_render_code.snap
---
source: crates/vize_atelier_jsx/src/compile.rs
expression: module
---
import { toDisplayString as _toDisplayString, openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue"
export function render(_ctx, _cache) {
  return (_openBlock(), _createElementBlock("div", null, _toDisplayString(x), 1 /* TEXT */))
}
