crates/vize_atelier_jsx/src/compile/snapshots/vize_atelier_jsx__compile__tests__source_map_present_only_for_single_component_module.snap
---
source: crates/vize_atelier_jsx/src/compile/tests.rs
expression: map
---
{"file":"template.vue","mappings":"AAAc;SAAA,oCAAA,6BAAA","names":[],"sources":["template.vue"],"sourcesContent":["<div>{x}</div>"],"version":3}
